# server/domain/resp/common.go
@@ -4,3 +4,7 @@ type Base struct {
 	Message string      `json:"message"`
 	Data    interface{} `json:"data"`
 }
+
+type Page struct {
+	DataCount int `json:"data_count"`
+}
